# opentelemetry-instrumentation-digma

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  make_proto.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-publish.yml  unit-tests.yml  version-bump.yml
digma_instrumentation/: configuration.py  instrumentation_tools.py  opentelemetry_utils.py
digma_instrumentation/digma/: configuration.py  opentelemetry_utils.py
opentelemetry_instrumentation_digma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protos/: collector.proto
src/conf/: __init__.py  environment_variables.py
src/opentelemetry/exporter/digma/: __init__.py  collector_pb2.py  collector_pb2_grpc.py  common.py  instrumnetation_tools.py  proto_conversions.py  traceback_parser.py  version.py
src/opentelemetry/exporter/digma/v1/: digma_pb2.py  digma_pb2_grpc.py
src/opentelemetry/instrumentation/: digma.py
src/opentelemetry/instrumentation/digma/: __init__.py  digma_configuration.py  instrumentation_extensions.py  opentelemetry_utils.py  resource_attributes.py  trace_decorator.py
src/opentelemetry/proto/digma/v1/: digma_pb2.py  digma_pb2_grpc.py
src/opentelemetry_exporter_digma.egg-info/: PKG-INFO  SOURCES.txt
tests/: my_test.py  stubs.py  test_digma_configuration.py  test_span_decorator.py  test_traceback_parser.py
tests/opentelmetry/instrumentation/digma/: __init__.py  helpers.py
tests/stubs/: python_module.py
utility_packages/: README.md  requirements.txt  setup.py
utility_packages/src/digma/instrumentation/test_tools/: __init__.py  otlp_exporter_for_tests.py
