[metadata]
name = opentelemetry-exporter-digma
version = 0.0.1
author = Roni Dover
author_email = rdover@digma.ai
description = First step package for digma
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    grpcio==1.43.0
    grpcio-tools==1.43.0
    opentelemetry-api==1.9.1
    opentelemetry-sdk==1.9.1
    opentelemetry-proto==1.9.1
[options.packages.find]
where = src
