[bumpversion]
commit = True
tag = True
current_version = 0.0.1

[bumpversion:file:setup.cfg]
search = version = '{current_version}'
replace = version = '{new_version}'

[bumpversion:file:src/opentelemetry/exporter/digma/version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = opentelemetry-exporter-digma
version = '0.1.0'
author = Roni Dover
author_email = rdover@digma.ai
description = First step package for digma
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    grpcio==1.43.0
    grpcio-tools==1.43.0
    opentelemetry-api==1.9.1
    opentelemetry-sdk==1.9.1
    opentelemetry-proto==1.9.1
[options.packages.find]
where = src
