[metadata]
name = opentelemetry-exporter-digma
version = '0.0.5'
author = Roni Dover
author_email = rdover@digma.ai
description = First step package for digma
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    grpcio==1.43.0
    grpcio-tools==1.43.0
    opentelemetry-api==1.9.1
    opentelemetry-sdk==1.9.1
    opentelemetry-proto==1.9.1
[options.packages.find]
where = src
